force-app/main/default/objects/Work__c/Work__c.object-meta.xml
<CustomObject>
    <description>The work that will be tested. Can be a user story or other piece of functionality.</description>
    <label>Work</label>
    <nameField>
        <displayFormat>W-{000000}</displayFormat>
        <label>Work ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>