force-app/main/default/objects/Work__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Subject of the work item</description>
    <inlineHelpText>Enter a summary of this work item including key info.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>